# streamat

./: .gitignore  DESIGN.md  GEMINI.md  PLAN.md  README.md  conversion.py  core.py  example.py  example_matrix.mtx  logging_config.py  models.py  pyproject.toml  server.py
.github/workflows/: ci.yml
.hypothesis/constants/: 1bd2b380452a1cf1  30a6fb7e49724a25  3ab3f9b976709fcb  3d9f35737a5c7f24  5f39179bc2bcee9e  7dc74c93210b3332  baca963901db4a66  bf1dffdf8d622126
streammat/: __init__.py  config.py  conversion.py  core.py  data_manager.py  example.py  logging_config.py  models.py  server.py  server_runner.py
tests/: test_conversion.py  test_core.py  test_data_manager.py  test_properties.py  test_server.py
worklogs/: 09-01-2025.worklog.md  09-16-2025.worklog.md  09-17-2025.worklog.md
