[project]
name = "streammat"
version = "1.1.0"
description = "A high-performance matrix-vector operation library using TileDB and FastAPI."
requires-python = ">=3.12"
dependencies = [
    "tiledb>=0.25.0", # Using the TileDB Python API
    "numpy>=1.26.0", # For efficient numerical operations
    "fastapi>=0.111.0", # For the high-performance web server
    "uvicorn[standard]>=0.29.0", # ASGI server to run FastAPI
    "pydantic>=2.7.0", # For data modeling and validation
    "aiorwlock>=1.3.0", # For async reader-writer lock # For structured and pleasant logging
    "loguru>=0.7.2",
    "typer>=0.16.0",
]

[tool.setuptools]
packages = ["streammat"]
