[project]
name = "streammat"
version = "1.2.0"
description = "A high-performance matrix-vector operation library using TileDB and FastAPI."
authors = [{name = "jlikhuva", email = "jlikhuva@alumni.stanford.edu"}]
license = {file = "LICENSE"}
requires-python = ">=3.12"
keywords = ["matrix", "sparse", "tiledb", "fastapi", "linear-algebra"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "tiledb>=0.25.0", # Using the TileDB Python API
    "numpy>=1.26.0", # For efficient numerical operations
    "fastapi[standard]>=0.111.0", # For the high-performance web server
    "uvicorn[standard]>=0.29.0", # ASGI server to run FastAPI
    "pydantic>=2.7.0", # For data modeling and validation
    "pydantic-settings>=2.1.0", # For settings management
    "aiorwlock>=1.3.0", # For async reader-writer lock # For structured and pleasant logging
    "loguru>=0.7.2",
    "typer[all]>=0.16.0", # Required for Harwell-Boeing format support
    "scipy>=1.13.0",
    "aiohttp>=3.9.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "requests>=2.31.0",
    "hypothesis>=6.82.0",
    "mypy>=1.10.0",
    "ruff>=0.5.0",
]

[tool.setuptools]
packages = ["streammat"]

# Add a CLI script entry point
[project.scripts]
streammat-convert = "streammat.conversion:cli_app"
streammat-server = "streammat.server_runner:main"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/Versalife/streamat"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "streammat.conversion"
disable_error_code = ["assignment"]


[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

